--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <title>Landing page</title>
+
 <body>
     <h1>My landing page</h1>
-    <a href="/flaskblog">Flask blog</a>
+    <p>
+        <a href="/flaskblog">Flask blog</a>
+    </p>
+    <p>
+        <a href="/airsense">Airsense</a>
+    </p>
 </body>
 
 </html>
